# main.py
@@ -2,8 +2,8 @@ import json
 import quart
 import quart_cors
 from quart import request
-from quart import jsonify
-
+import json
+from quart import Quart, render_template
 from LiteratureClient import DB
 
 app = quart_cors.cors(quart.Quart(__name__), allow_origin="https://chat.openai.com")
@@ -11,43 +11,40 @@ app = quart_cors.cors(quart.Quart(__name__), allow_origin="https://chat.openai.c
 @app.post("/list_all/<string:grade>/<string:type>")
 async def list_all(grade, type):
     db = DB(grade, type)
-    all_books = db.list_all()
-    return jsonify(all_books)
+    all_books = {'list all':db.list_all()}
+    # all_books.['Main web-site view']=f'https://translate.google.com/translate?sl=uk&tl=en&u=https://literature2.illia56.repl.co/{("ukr" if "ukr" in type else "for")}/{grade}_grades'
+    return quart.Response(response=json.dumps(all_books), mimetype="application/json", status=200)
+
 @app.post("/get_books/<string:grade>/<string:type>")
 async def get_books(grade, type):
     db = DB(grade, type)
     books = db.list_all()
-    return jsonify(books)
+    return quart.Response(response=json.dumps(books), mimetype="application/json", status=200)
 
 @app.post("/get_presentation/<string:grade>/<string:type>")
 async def get_presentation(grade, type):
     db = DB(grade, type)
     presentation = db.get_presentation()
-    return jsonify(presentation)
+    return quart.Response(response=json.dumps(presentation), mimetype="application/json", status=200)
 
 @app.post("/get_bio/<string:grade>/<string:type>/<string:author>")
 async def get_bio(grade, type, author):
     db = DB(grade, type)
     bio = db.get_bio(author)
-    return jsonify(bio)
+    print(bio)
+    return quart.Response(response=json.dumps(bio), mimetype="application/json", status=200)
 
 @app.post("/get_content/<string:grade>/<string:type>/<string:author>/<string:name>")
 async def get_content(grade, type, author, name):
     db = DB(grade, type)
     content = db.get_content(author, name)
-    return jsonify(content)
+    return quart.Response(response=json.dumps(content), mimetype="application/json", status=200)
 
 @app.post("/get_rnd/<string:grade>/<string:type>")
 async def get_rnd(grade, type):
     db = DB(grade, type)
     rnd = db.get_rnd()
-    return jsonify(rnd)
-
-@app.post("/get_adding/<string:grade>/<string:type>/<string:command>")
-async def get_adding(grade, type, command):
-    db = DB(grade, type)
-    adding = db.get_adding(command)
-    return jsonify(adding)
+    return quart.Response(response=json.dumps(rnd), mimetype="application/json", status=200)
 
 @app.get("/logo.jpg")
 async def plugin_logo():
@@ -59,14 +56,20 @@ async def plugin_manifest():
     host = request.headers['Host']
     with open("./.well-known/ai-plugin.json") as f:
         text = f.read()
-        return quart.Response(text, mimetype="text/json")
+        return quart.Response(response=text, mimetype="application/json", status=200)
 
 @app.get("/openapi.yaml")
 async def openapi_spec():
     host = request.headers['Host']
     with open("openapi.yaml") as f:
         text = f.read()
-        return quart.Response(text, mimetype="text/yaml")
+        return quart.Response(response=text, mimetype="text/yaml", status=200)
+
+@app.route('/legal', methods=['GET'])
+async def legal():
+    return await render_template('LEGAL.html')
+
+
 
 def main():
     app.run(debug=True, host="0.0.0.0", port=5003)
